--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
 
   
   
-  
+<!--Optional, send client hints to get accurate device data-->
+<meta http-equiv="delegate-ch" content="sec-ch-ua https://e7prfk.mcgo2.com; sec-ch-ua-mobile https://e7prfk.mcgo2.com; sec-ch-ua-arch https://e7prfk.mcgo2.com; sec-ch-ua-model https://e7prfk.mcgo2.com; sec-ch-ua-platform https://e7prfk.mcgo2.com; sec-ch-ua-platform-version https://e7prfk.mcgo2.com; sec-ch-ua-bitness https://e7prfk.mcgo2.com; sec-ch-ua-full-version-list https://e7prfk.mcgo2.com; sec-ch-ua-full-version https://e7prfk.mcgo2.com" />
+
+<!-- MaxConv Tracking Script Base Code-->
+<script>!function(w,d,o,n,c){w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};var s=d.createElement(n),t=d.getElementsByTagName(n)[0];s.async=!0;s.defer=!0;s.src="https://e7prfk.mcgo2.com/t/t.js";t.parentNode.insertBefore(s,t);}(window,document,"maxconv","script");</script>
+<noscript><link rel="stylesheet" href="https://e7prfk.mcgo2.com/t/t.css?mc_ns=1" /></noscript>
+<!-- End MaxConv Tracking Script Base Code-->  
 </head>
 <body>
   
@@ -41,7 +47,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://6a2a7p2bg4jrmfxisetsj8walg.hop.clickbank.net/?tid=organic" target="_blank">nooro™ Foot Massager</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://e7prfk.mcgo2.com/click" target="_blank">nooro™ Foot Massager</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -58,7 +64,7 @@
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#content4-29"><span class="mbrib-star mbr-iconfont mbr-iconfont-btn"></span>Avantages</a>
                     </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#info1-14"><span class="mbrib-question mbr-iconfont mbr-iconfont-btn"></span>FAQ</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing" target="_blank"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ORDER NOW</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://e7prfk.mcgo2.com/click" target="_blank"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ORDER NOW</a></div>
             </div>
         </div>
     </nav>
@@ -80,7 +86,7 @@
                 <div class="text-wrapper">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>nooro™ Foot Massager</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">Nooro Foot Massager est un appareil électronique révolutionnaire qui soulage les douleurs intenses des jambes et des pieds. Cet appareil est une excellente alternative aux visites médicales coûteuses, aux analgésiques addictifs ou aux massothérapies fréquentes.<br>&nbsp;<u style="font-weight: bold;"><br></u><strong><u>Essayez le masseur de pieds nooro™ pour vivre une meilleure expérience&nbsp;!</u></strong><br></p>
-                    <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing">Obtenez aujourd'hui un masseur de pieds nooro™ pour seulement 2 CHF</a></div>
+                    <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://e7prfk.mcgo2.com/click">Obtenez aujourd'hui un masseur de pieds nooro™ pour seulement 2 CHF</a></div>
                 </div>
             </div>
         </div>
@@ -358,7 +364,7 @@
 <br>La caractéristique la plus impressionnante du Nooro Foot Massager est sa capacité à inverser efficacement les symptômes de la douleur dans les jambes et les pieds. Avec une utilisation quotidienne constante pendant seulement 15 minutes, les utilisateurs connaîtront des améliorations tangibles de leur niveau de douleur. Ils peuvent également retrouver la santé de leurs jambes. Elle peut améliorer non seulement le confort quotidien, mais également la mobilité et la qualité de vie, compromises par des douleurs persistantes.
 <br>
 <br>La technologie de stimulation électrique neuromusculaire (NMES) est une méthode révolutionnaire qui vise à traiter les causes profondes des affections débilitantes. Le masseur de pieds Nooro augmente instantanément la circulation sanguine en envoyant des impulsions électriques dans les tissus du pied. Cela stimule les zones faibles du pied et permet un apport de nutriments.<br>&nbsp;<br><strong><u>Essayez-le aujourd'hui et voyez la différence que cela peut faire dans votre vie&nbsp;!</u></strong><br></p>
-                    <div class="mbr-section-btn"><a class="btn btn-warning display-7" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing"><span class="fa fa-check-circle mbr-iconfont mbr-iconfont-btn"></span>Commandez maintenant et obtenez 99&nbsp;% de réduction</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-warning display-7" href="https://e7prfk.mcgo2.com/click"><span class="fa fa-check-circle mbr-iconfont mbr-iconfont-btn"></span>Commandez maintenant et obtenez 99&nbsp;% de réduction</a></div>
                 </div>
             </div>
             <div class="col-12 col-lg-4">
@@ -456,7 +462,7 @@
                         <h4 class="card-title mbr-fonts-style align-center mb-4 display-1"><strong>Offre spéciale à durée limitée – Agissez maintenant&nbsp;!</strong></h4>
                         <p class="mbr-text mbr-fonts-style mb-4 display-5">
                             Sécurisez votre pack d'essai gratuit du masseur de pieds nooro™ jusqu'à épuisement des stocks&nbsp;!</p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-5" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing" target="_blank"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn"></span>ESSAYEZ LE MASSEUR DE PIEDS NOORO™ MAINTENANT</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-5" href="https://e7prfk.mcgo2.com/click" target="_blank"><span class="mbrib-cart-add mbr-iconfont mbr-iconfont-btn"></span>ESSAYEZ LE MASSEUR DE PIEDS NOORO™ MAINTENANT</a></div>
                     </div>
                 </div>
             </div>
@@ -550,7 +556,7 @@
 <br>Après cela, utilisez la télécommande pour sélectionner l'un des 6 modes de vitesse que vous préférez. Voilà ! Vous vous souciez prêt à profiter d'un massage apaisant.
 <br>
 <br>Un manuel d'instructions est inclus dans l'emballage pour vous guider dans l'utilisation du produit. Assurez-vous de le nettoyer après chaque utilisation.<br></p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-7" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>Commandez un masseur de pieds nooro™</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-7" href="https://e7prfk.mcgo2.com/click"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>Commandez un masseur de pieds nooro™</a></div>
                     </div>
                 </div>
             </div>
@@ -579,7 +585,7 @@
 <br>Si vous n'êtes pas totalement et entièrement satisfait du masseur de pieds nooro™, ou de votre expérience au cours des 90 premiers jours suivant votre achat, faites-le-nous simplement savoir sur le portail d'assistance du masseur de pieds nooro™ et nous vous rembourserons dans les 48 heures suivant le produit étant retourné.
 <br>
 <br>C'est vrai, retournez simplement le masseur de pieds nooro™, même les bouteilles vides, à tout moment dans les 90 jours suivant votre achat et vous recevrez un remboursement, sans poser de questions !</p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing" target="_blank"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="https://e7prfk.mcgo2.com/click" target="_blank"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
                                 Procurez-vous vos bouteilles et essayez par vous-même
                             </a></div>
                     </div>
@@ -737,12 +743,12 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-9">
                 <div class="image-wrap mb-4">
-                    <a href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing" target="_blank"><img src="assets/images/img-4669-removebg-preview-666x375.png" alt="buy cobrax gummies"></a>
+                    <a href="https://e7prfk.mcgo2.com/click" target="_blank"><img src="assets/images/img-4669-removebg-preview-666x375.png" alt="buy cobrax gummies"></a>
                 </div>
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Aujourd'hui seulement pour: 2 CHF</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-7">
                     Prix ​​régulier: 199.95 CHF</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-5" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing" target="_blank"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>OBTENEZ LE MASSEUR DE PIEDS NOORO™ AUJOURD'HUI</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-5" href="https://e7prfk.mcgo2.com/click" target="_blank"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>OBTENEZ LE MASSEUR DE PIEDS NOORO™ AUJOURD'HUI</a></div>
             </div>
         </div>
     </div>
