--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                 </div>
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Aujourd'hui seulement pour: 2 CHF</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    Prix ​​régulier: 199.95 CHF</p>
+                    Prix ​​régulier: <strike>199.95 CHF</strike></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-5" href="https://e7prfk.mcgo2.com/click" target="_blank"><span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>OBTENEZ LE MASSEUR DE PIEDS NOORO™ AUJOURD'HUI</a></div>
             </div>
         </div>
