--- a/Disclaimer.html
+++ b/Disclaimer.html
@@ -26,7 +26,13 @@
 
   
   
-  
+<!--Optional, send client hints to get accurate device data-->
+<meta http-equiv="delegate-ch" content="sec-ch-ua https://e7prfk.mcgo2.com; sec-ch-ua-mobile https://e7prfk.mcgo2.com; sec-ch-ua-arch https://e7prfk.mcgo2.com; sec-ch-ua-model https://e7prfk.mcgo2.com; sec-ch-ua-platform https://e7prfk.mcgo2.com; sec-ch-ua-platform-version https://e7prfk.mcgo2.com; sec-ch-ua-bitness https://e7prfk.mcgo2.com; sec-ch-ua-full-version-list https://e7prfk.mcgo2.com; sec-ch-ua-full-version https://e7prfk.mcgo2.com" />
+
+<!-- MaxConv Tracking Script Base Code-->
+<script>!function(w,d,o,n,c){w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};var s=d.createElement(n),t=d.getElementsByTagName(n)[0];s.async=!0;s.defer=!0;s.src="https://e7prfk.mcgo2.com/t/t.js";t.parentNode.insertBefore(s,t);}(window,document,"maxconv","script");</script>
+<noscript><link rel="stylesheet" href="https://e7prfk.mcgo2.com/t/t.css?mc_ns=1" /></noscript>
+<!-- End MaxConv Tracking Script Base Code-->  
 </head>
 <body>
   
@@ -36,7 +42,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://6a2a7p2bg4jrmfxisetsj8walg.hop.clickbank.net/?tid=organic" target="_blank">nooro™ Foot Massager</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://e7prfk.mcgo2.com/click" target="_blank">nooro™ Foot Massager</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -53,7 +59,7 @@
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#content4-29"><span class="mbrib-star mbr-iconfont mbr-iconfont-btn"></span>Avantages</a>
                     </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#info1-14"><span class="mbrib-question mbr-iconfont mbr-iconfont-btn"></span>FAQ</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://www.ambalayatracking.com/4DSGJ4Z/838ZXDC/?source_id=cobraxbing" target="_blank"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ORDER NOW</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://e7prfk.mcgo2.com/click" target="_blank"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ORDER NOW</a></div>
             </div>
         </div>
     </nav>
