--- a/Terms.html
+++ b/Terms.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://e7prfk.mcgo2.com/click" target="_blank">nooro™ Foot Massager</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://bestofferhere.link/nooromassager" target="_blank">nooro™ Foot Massager</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -59,7 +59,7 @@
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#content4-29"><span class="mbrib-star mbr-iconfont mbr-iconfont-btn"></span>Avantages</a>
                     </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#info1-14"><span class="mbrib-question mbr-iconfont mbr-iconfont-btn"></span>FAQ</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://e7prfk.mcgo2.com/click" target="_blank"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ORDER NOW</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://bestofferhere.link/nooromassager" target="_blank"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ORDER NOW</a></div>
             </div>
         </div>
     </nav>
